--- a/build
+++ b/build
@@ -3,8 +3,10 @@
 mkdir -p .build
 cd .build
 
+BUILD_TYPE=${1:-RelWithDebInfo}
+
 cmake \
     -G "Ninja" \
-    -DCMAKE_BUILD_TYPE=Debug \
+    -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
     -DCMAKE_TOOLCHAIN_FILE=../cmake/linux.cmake ..
 cmake --build .
