Store debug info about list elements when parsing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,9 @@ set(SOURCES
 	"list.c"
 	"map.c"
 	"symtab.c"
-	"debug.c"
+	"debug_info.c"
+	"strpool.c"
+	"print.c"
 )
 
 setup_library(mara ${MARA_STATIC} "${SOURCES}")
