Add rudimentary core module

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
 	"./main.c"
 	"./parse.c"
 	"./compile.c"
+	"./exec.c"
 	"./vendor/argparse/argparse.c"
 )
 add_executable(cli "${SOURCES}")
