--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,6 +36,7 @@ jobs:
     strategy:
       matrix:
         build-config: [Debug, RelWithDebInfo]
+    runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
